# tks_volsu_schedule

./: .gitignore  Dockerfile  README.md  aioUtils.py  config.py  config.toml  dbUtils.py  deploy.ps1  image_maker.py  json_handler.py  kb.py  main.py  pyproject.toml  requirements.txt  text_maker.py  utils.py
.github/workflows/: deploy.yml
app/: __init__.py  bot.py  config.py  filters.py  middlewares.py
app/common/: __init__.py  schedule_parser.py  text_maker.py  user_activity.py
app/database/: __init__.py  activity.py  db_init.py  schedule.py  user.py  utils.py  vkuser.py
app/handlers/: __init__.py
app/handlers/admin/: callback.py  message.py
app/handlers/edit/: callback.py  message.py
app/handlers/user/: callback.py  message.py  status.py
app/markups/: __init__.py  admin.py  admin_markups.py  edit_markups.py  keyboard_factory.py  user.py  user_markups.py
app/misc/: __init__.py  compare.py  schedule_parser.py  sheets_maker.py  states.py  text_maker.py  user_activity.py
app/tg/: __init__.py  middlewares.py
app/tg/handlers/: __init__.py
app/tg/markups/: __init__.py  admin.py  keyboard_factory.py  user.py
app/vk/: __init__.py  middleware.py
app/vk/handlers/: callback.py  message.py
app/vk/markups/: __init__.py
bot/: __init__.py  bot.py  config.py  database.py  filters.py  middlewares.py  requirements.txt
bot/database/: __init__.py  activity.py  db_init.py  schedule.py  user.py  utils.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py  callback.py  message.py  message_handler.py
bot/handlers/edit/: callback.py  message.py
bot/handlers/user/: __init__.py  callback.py  callback_handler.py  message.py  message_handler.py  schedule_editing.py  status.py  status_handler.py
bot/markups/: __init__.py  admin_markups.py  edit_markups.py  keyboard_factory.py  user_markups.py
bot/misc/: __init__.py  states.py  text_maker.py  text_maker_editing.py  user_activity.py  utils.py
data/: combined_schedule.json  config.py  schedule.db  schedules.py  university.json  users.db  utils.py
data/schedule/rooms/: template.xlsx
preparation/: college_converter.py  get_college.py  json_combiner.py  university_converter.py
подготовка/: college_converter.py  handler_json.py  json_combiner.py  schedule.json  to_json_converter.py  university_converter.py
(+8 files in other folders)
