[project]
name = "tks-volsu-schedule"
version = "0.1.0"
description = "Бот, показывающий расписание для студентов, преподавателей и кабинетов кафедры ТКС ВолГУ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "asyncio>=3.4.3",
    "lets_plot>=4.4.1",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pre-commit>=4.3.0",
    "python-docx>=1.1.2",
    "pytz>=2024.1",
    "toml>=0.10.2",
]