[project]
name = "tks-volsu-schedule"
version = "0.1.0"
description = "Бот, показывающий расписание для студентов, преподавателей и кабинетов кафедры ТКС ВолГУ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocron>=2.1",
    "aiogram>=3.22.0",
    "asyncio>=3.4.3",
    "lets-plot>=4.7.3",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "python-docx>=1.1.2",
    "pytz>=2024.1",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 120
exclude = ["__pycache__", "venv", "uv.lock"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "ANN", "Q"]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
