[project]
name = "tks-volsu-schedule"
version = "0.1.0"
description = "Бот, показывающий расписание для студентов, преподавателей и кабинетов кафедры ТКС ВолГУ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocron>=2.1",
    "aiogram==3.24.0",
    "asyncio>=3.4.3",
    "lets-plot==4.8.2",
    "matplotlib==3.10.8",
    "openpyxl>=3.1.5",
    "pandas==3.0.0",
    "pandas-stubs==3.0.0.260204",
    "python-docx>=1.1.2",
    "pytz>=2024.1",
    "toml>=0.10.2",
    "types-pytz==2025.2.0.20251108",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.15.0",
]

[tool.ruff]
line-length = 120
exclude = ["__pycache__", "venv", "uv.lock"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "ANN", "Q"]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
